[package]
name = "cryogen_plugin_json"
version = "0.1.0"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description = "JSON plugin for cryogen"
license = "MIT"
license_file = "../LICENSE"
homepage = "https://github.com/ferristseng/cryogen"
repository = "https://github.com/ferristseng/cryogen"

[dependencies]
clap = "2.20.*"
serde_json = "0.9"
cryogen_prelude = { version = "*", path = "../prelude" }
