[package]
name = "cryogen_plugin_json"
version = "0.1.1"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description = "JSON plugin for cryogen"
license-file = "../LICENSE"
homepage = "https://github.com/ferristseng/cryogen"
repository = "https://github.com/ferristseng/cryogen"

[dependencies]
clap = "2.20.*"
serde_json = "0.9"
cryogen_prelude = { version = "0.1.*", path = "../prelude" }
