[package]
name                      = "cryogen_plugin_json"
version                   = "0.1.2"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description               = "JSON plugin for cryogen"
license-file              = "../LICENSE"
homepage                  = "https://github.com/ferristseng/cryogen"
repository                = "https://github.com/ferristseng/cryogen"

[dependencies]
clap                      = "2.32.*"
serde_json                = "1.0.*"
cryogen_prelude           = { version = "0.1.*", path = "../prelude" }
