[package]
name                      = "cryogen_plugin_markdown"
version                   = "0.1.2"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description               = "Markdown plugin for cryogen"
license-file              = "../LICENSE"
homepage                  = "https://github.com/ferristseng/cryogen"
repository                = "https://github.com/ferristseng/cryogen"

[dependencies]
clap                      = "2.32.*"
cryogen_prelude           = { version = "0.1.*", path = "../prelude", features = ["markdown"] }
pulldown-cmark            = { version = "0.1.*", default-features = false }
serde                     = "1.0.*"
serde_derive              = "1.0.*"
