[package]
name                      = "cryogen_plugin_primitives"
version                   = "0.1.1"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description               = "Primitives plugin for Cryogen"
license-file              = "../LICENSE"
homepage                  = "https://github.com/ferristseng/cryogen"
repository                = "https://github.com/ferristseng/cryogen"

[dependencies]
clap                      = "2.32.*"
cryogen_prelude           = { version = "0.1.*", path = "../prelude" }
