[package]
name = "cryogen_plugin_yaml"
version = "0.1.0"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description = "YAML plugin for Cryogen"
license = "MIT"
license_file = "../LICENSE"
homepage = "https://github.com/ferristseng/cryogen"
repository = "https://github.com/ferristseng/cryogen"

[dependencies]
clap = "2.20.*"
serde_yaml = "0.6.*"
cryogen_prelude = { version = "*", path = "../prelude" }
