[package]
name = "cryogen_prelude"
version = "0.1.1"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description = "Common library for all cryogen modules"
license-file = "../LICENSE"
homepage = "https://github.com/ferristseng/cryogen"
repository = "https://github.com/ferristseng/cryogen"

[dependencies]
serde = "0.9.*"
tera = "0.8.*"
clap = "2.20.*"
