[package]
name                      = "cryogen_prelude"
version                   = "0.1.2"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description               = "Common library for all cryogen modules"
license-file              = "../LICENSE"
homepage                  = "https://github.com/ferristseng/cryogen"
repository                = "https://github.com/ferristseng/cryogen"

[dependencies]
serde                     = "1.0.*"
tera                      = "0.11.*"
clap                      = "2.32.*"
