[package]
name                      = "cryogen_prelude"
version                   = "0.1.2"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
description               = "Common library for all cryogen modules"
license-file              = "../LICENSE"
homepage                  = "https://github.com/ferristseng/cryogen"
repository                = "https://github.com/ferristseng/cryogen"

[dependencies]
clap                      = "2.32.*"
serde                     = "1.0.*"
serde_yaml                = { version = "0.7.*", optional = true }
tera                      = "0.11.*"

[features]
markdown                  = ["serde_yaml"]
